--- a/public/estilos.css
+++ b/public/estilos.css
@@ -1,37 +1,52 @@
-:root {
-    --color-green: #00a878;
-    --color-red: #fe5e41;
-    --color-button: #fdffff;
-    --color-black: #000;
+body
+{
+    margin: 0;
+    padding: 0;
+    background: #f3f3f3;
 }
-.switch-button {
-    display: inline-block;
-}
-.switch-button .switch-button__checkbox {
-    display: none;
-}
-.switch-button .switch-button__label {
-    background-color: var(--color-red);
-    width: 5rem;
-    height: 3rem;
-    border-radius: 3rem;
-    display: inline-block;
-    position: relative;
-}
-.switch-button .switch-button__label:before {
-    transition: .2s;
-    display: block;
+
+.center
+{
     position: absolute;
-    width: 3rem;
-    height: 3rem;
-    background-color: var(--color-button);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+input[type="checkbox"]
+{
+    position: relative;
+    width: 80px;
+    height: 40px;
+    -webkit-appearance: none;
+    background: #c6c6c6;
+    outline: none;
+    border-radius: 20px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, .2);
+    transition: .3s;
+}
+
+input:checked[type="checkbox"]
+{
+    background: #03a9f4;
+}
+
+input[type="checkbox"]::before
+{
     content: '';
-    border-radius: 50%;
-    box-shadow: inset 0px 0px 0px 1px var(--color-black);
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    background: #fff;
+    transform: scale(1.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    transition: .3s;
 }
-.switch-button .switch-button__checkbox:checked + .switch-button__label {
-    background-color: var(--color-green);
-}
-.switch-button .switch-button__checkbox:checked + .switch-button__label:before {
-    transform: translateX(2rem);
+
+input:checked[type="checkbox"]::before
+{
+    left: 40px;
 }
