--- a/views/index.html
+++ b/views/index.html
@@ -3,18 +3,28 @@
 <head>
     <title>IoT-Proyetcs</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    
     <link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
 
-    <div class="center">
-        <h1>Iot Controller</h1>
-
-        <input type="checkbox" name="" id="obj1">
-        <input type="checkbox" name="" id="obj2">
-        <input type="checkbox" name="" id="obj3">
+    <div class="contenedor">
+        <div>
+            <h1>Iot Controller</h1>
+        </div>
+        <div>
+            <input type="checkbox" name="" id="obj1">
+            <input type="checkbox" name="" id="obj2">
+            <input type="checkbox" name="" id="obj3">
+        </div>
+        <div>
+            <h1>RBP STREAM</h1>
+        </div>
+        <div class="card">
+            <img class="card__image" src="stream.mjpg" style="">
+        </div>
     </div>
-    
+
 </body>
 <script src="./script.js"></script>
 </html>
